--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@ ul.nav a:hover, ul.nav a:active, ul.nav a:focus {
 
 <div class="container">
   <div class="header">
-  <a href="#"><img src="Brian's Jeep.png" alt="" name="me" width="20%" height="90" id="Insert_logo" style="background-color: #8090AB; display:block;" /></a> 
+  <a href="#"><img src="/images/Brian's Jeep.png" alt="" name="me" width="20%" height="90" id="Insert_logo" style="background-color: #8090AB; display:block;" /></a> 
   
     </div>
   <div class="sidebar1">
