--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>Brian's Home Page</title>
-<link rel="icon" href="images/bpc.png">
+<link rel="icon" href="/images/bpc.png">
 <style type="text/css">
 <!--
 body {
