--- a/index.html
+++ b/index.html
@@ -135,8 +135,8 @@ ul.nav a:hover, ul.nav a:active, ul.nav a:focus {
     <ul class="nav">
       <li><a href="http://pages.iu.edu/~briacall/">Home</a></li>
       <li><a href="http://pages.iu.edu/~briacall/resume.html">Resume</a></li>
-      <li><a href="http://pages.iu.edu/~briacall/socialmedia.html">Social Media</a></li>
-      <li><a href="projects.html">Projects</a></li>
+      <li><a href="/socialmedia.html">Social Media</a></li>
+      <li><a href="/projects.html">Projects</a></li>
       
       <li><a href="contact.html">Contact Me</a></li>
     </ul>
