--- a/index.html
+++ b/index.html
@@ -192,6 +192,14 @@ function carousel() {
   <div class="footer">
     <p>Last updated by Brian Callahan on <!-- #BeginDate format:Am1a -->April 18, 2016 3:13 AM<!-- #EndDate -->
     </div>
+	
+	
+	<script>
+function myFunction() {
+    var x = new Date(document.lastModified);
+    document.getElementById("demo").innerHTML = x;
+}
+</script>
   
 </div>
 </body>
