--- a/index.html
+++ b/index.html
@@ -197,6 +197,16 @@ function myFunction() {
 }
 </script>
 	
+<script type="text/javascript">
+<!--
+var m = "This page was last updated: " + document.lastModified;
+var p = m.length-8;
+document.writeln("<center>");
+document.write(m.substring(p, 0));
+document.writeln("</center>");
+ -->
+</script>
+	
   <div class="footer">
     <p>Last updated by Brian Callahan on <!-- #BeginDate format:Am1a -->April 18, 2016 3:13 AM<!-- #EndDate -->
     </div>
