--- a/index.html
+++ b/index.html
@@ -133,11 +133,10 @@ ul.nav a:hover, ul.nav a:active, ul.nav a:focus {
     </div>
   <div class="sidebar1">
     <ul class="nav">
-      <li><a href="http://pages.iu.edu/~briacall/">Home</a></li>
-      <li><a href="http://pages.iu.edu/~briacall/resume.html">Resume</a></li>
+      <li><a href="https://briancallahan.github.io/">Home</a></li>
+      <li><a href="https://briancallahan.github.io/">Resume</a></li>
       <li><a href="/socialmedia.html">Social Media</a></li>
-      <li><a href="/projects.html">Projects</a></li>
-      
+      <li><a href="/projects.html">Projects</a></li>      
       <li><a href="contact.html">Contact Me</a></li>
     </ul>
     <p></p>
