--- a/index.html
+++ b/index.html
@@ -136,7 +136,8 @@
                <li><a href="https://briancallahan.github.io/">Home</a></li>
                <li><a href="https://briancallahan.github.io/">Resume</a></li>
                <li><a href="/socialmedia.html">Social Media</a></li>
-               <li><a href="/projects.html">Projects</a></li>      
+               <li><a href="/projects.html">Projects</a></li>  
+               <li><a href="hobbies.html">My Hobbies</a></li>
                <li><a href="contact.html">Contact Me</a></li>
              </ul>
              <p></p>
