--- a/index.html
+++ b/index.html
@@ -138,6 +138,7 @@
                <li><a href="/socialmedia.html">Social Media</a></li>
                <li><a href="/projects.html">Projects</a></li>  
                <li><a href="hobbies.html">My Hobbies</a></li>
+               <li><a href="photos.html">Photos</a></li>
                <li><a href="contact.html">Contact Me</a></li>
              </ul>
              <p></p>
