--- a/holidays.html
+++ b/holidays.html
@@ -1,3 +1,3 @@
-<a href="/holidays/Halloween.html">Halloween</a>
-<a href="/holidays/Chrismtas.html">Christmas</a>
+<a href="/holidays/halloween.html">Halloween</a>
+<a href="/holidays/chrismtas.html">Christmas</a>
 
