--- a/holidays/halloween.html
+++ b/holidays/halloween.html
@@ -1,12 +1,12 @@
 <center>
   <div id="picturelinks"> 
   <p>&nbsp;</p>
-  <img src="pictureimg.png" width="387" height="66">
+  <img src="/images/halloween/pictureimg.png" width="387" height="66">
   <p>&nbsp;</p>
   <center>
-    <a href="2011photos.html"><img src="2011photos/2011logo.png" width="184" height="64" border="0"></a>
+    <a href="2011photos.html"><img src="/images/halloween/2011photos/2011logo.png" width="184" height="64" border="0"></a>
   </center>
   <p>&nbsp;</p>
   <center>
-    <a href="2013photospage.html"><img src="2013photos/2013logo.png" width="202" height="65"></a>
+    <a href="2013photospage.html"><img src="/images/halloween/2013photos/2013logo.png" width="202" height="65"></a>
   </center></div></center>
