--- a/holidays/halloween.html
+++ b/holidays/halloween.html
@@ -8,5 +8,5 @@
   </center>
   <p>&nbsp;</p>
   <center>
-    <a href="2013photospage.html"><img src="/images/halloween/2013photos/2013logo.png" width="202" height="65"></a>
+    <a href="2013photos.html"><img src="/images/halloween/2013photos/2013logo.png" width="202" height="65"></a>
   </center></div></center>
