--- a/holidays/2013photos.html
+++ b/holidays/2013photos.html
@@ -1,6 +1,6 @@
 <center>
   <div id="gallery"> 
-  <a href="2013photos/DSC_0002.JPG"><img src="2013photos/DSC_0002.JPG" width="200" height="150"></a>
+  <a href="/images/halloween/2013photos/DSC_0002.JPG"><img src="/images/halloween/2013photos/DSC_0002.JPG" width="200" height="150"></a>
   <a href="2013photos/DSC_0003.JPG"><img src="2013photos/DSC_0003.JPG" width="200" height="150"></a>
   <a href="2013photos/DSC_0004.JPG"><img src="2013photos/DSC_0004.JPG" width="200" height="150"></a>
   <a href="2013photos/DSC_0005.JPG"><img src="2013photos/DSC_0005.JPG" width="200" height="150"></a>
