--- a/holidays/2013photos.html
+++ b/holidays/2013photos.html
@@ -1,26 +1,26 @@
 <center>
   <div id="gallery"> 
   <a href="/images/halloween/2013photos/DSC_0002.JPG"><img src="/images/halloween/2013photos/DSC_0002.JPG" width="200" height="150"></a>
-  <a href="2013photos/DSC_0003.JPG"><img src="2013photos/DSC_0003.JPG" width="200" height="150"></a>
-  <a href="2013photos/DSC_0004.JPG"><img src="2013photos/DSC_0004.JPG" width="200" height="150"></a>
-  <a href="2013photos/DSC_0005.JPG"><img src="2013photos/DSC_0005.JPG" width="200" height="150"></a>
-  <a href="2013photos/DSC_0006.JPG"><img src="2013photos/DSC_0006.JPG" width="200" height="150"></a>
-  <a href="2013photos/DSC_0007.JPG"><img src="2013photos/DSC_0007.JPG" width="200" height="150"></a>
-  <a href="2013photos/DSC_0008.JPG"><img src="2013photos/DSC_0008.JPG" width="200" height="150"></a>
-  <a href="2013photos/DSC_0009.JPG"><img src="2013photos/DSC_0009.JPG" width="200" height="150"></a>
-  <a href="2013photos/DSC_0010.JPG"><img src="2013photos/DSC_0010.JPG" width="200" height="150"></a>
-  <a href="2013photos/DSC_0011.JPG"><img src="2013photos/DSC_0011.JPG" width="200" height="150"></a>
-  <a href="2013photos/DSC_0012.JPG"><img src="2013photos/DSC_0012.JPG" width="200" height="150"></a>
-  <a href="2013photos/DSC_0013.JPG"><img src="2013photos/DSC_0013.JPG" width="200" height="150"></a>
-  <a href="2013photos/DSC_0014.JPG"><img src="2013photos/DSC_0014.JPG" width="200" height="150"></a>
-  <a href="2013photos/DSC_0015.JPG"><img src="2013photos/DSC_0015.JPG" width="200" height="150"></a>
-  <a href="2013photos/DSC_0016.JPG"><img src="2013photos/DSC_0016.JPG" width="200" height="150"></a>
-  <a href="2013photos/DSC_0017.JPG"><img src="2013photos/DSC_0017.JPG" width="200" height="150"></a>
-  <a href="2013photos/DSC_0018.JPG"><img src="2013photos/DSC_0018.JPG" width="200" height="150"></a>
-  <a href="2013photos/DSC_0019.JPG"><img src="2013photos/DSC_0019.JPG" width="200" height="150"></a>
-  <a href="2013photos/DSC_0020.JPG"><img src="2013photos/DSC_0020.JPG" width="200" height="150"></a>
-  <a href="2013photos/DSC_0021.JPG"><img src="2013photos/DSC_0021.JPG" width="200" height="150"></a>
-  <a href="2013photos/DSC_0022.JPG"><img src="2013photos/DSC_0022.JPG" width="200" height="150"></a>
+  <a href="/images/halloween/2013photos/DSC_0003.JPG"><img src="/images/halloween/2013photos/DSC_0003.JPG" width="200" height="150"></a>
+  <a href="/images/halloween/2013photos/DSC_0004.JPG"><img src="/images/halloween/2013photos/DSC_0004.JPG" width="200" height="150"></a>
+  <a href="/images/halloween/2013photos/DSC_0005.JPG"><img src="/images/halloween/2013photos/DSC_0005.JPG" width="200" height="150"></a>
+  <a href="/images/halloween/2013photos/DSC_0006.JPG"><img src="/images/halloween/2013photos/DSC_0006.JPG" width="200" height="150"></a>
+  <a href="/images/halloween/2013photos/DSC_0007.JPG"><img src="/images/halloween/2013photos/DSC_0007.JPG" width="200" height="150"></a>
+  <a href="/images/halloween/2013photos/DSC_0008.JPG"><img src="/images/halloween/2013photos/DSC_0008.JPG" width="200" height="150"></a>
+  <a href="/images/halloween/2013photos/DSC_0009.JPG"><img src="/images/halloween/2013photos/DSC_0009.JPG" width="200" height="150"></a>
+  <a href="/images/halloween/2013photos/DSC_0010.JPG"><img src="/images/halloween/2013photos/DSC_0010.JPG" width="200" height="150"></a>
+  <a href="/images/halloween/2013photos/DSC_0011.JPG"><img src="/images/halloween/2013photos/DSC_0011.JPG" width="200" height="150"></a>
+  <a href="/images/halloween/2013photos/DSC_0012.JPG"><img src="/images/halloween/2013photos/DSC_0012.JPG" width="200" height="150"></a>
+  <a href="/images/halloween/2013photos/DSC_0013.JPG"><img src="/images/halloween/2013photos/DSC_0013.JPG" width="200" height="150"></a>
+  <a href="/images/halloween/2013photos/DSC_0014.JPG"><img src="/images/halloween/2013photos/DSC_0014.JPG" width="200" height="150"></a>
+  <a href="/images/halloween/2013photos/DSC_0015.JPG"><img src="/images/halloween/2013photos/DSC_0015.JPG" width="200" height="150"></a>
+  <a href="/images/halloween/2013photos/DSC_0016.JPG"><img src="/images/halloween/2013photos/DSC_0016.JPG" width="200" height="150"></a>
+  <a href="/images/halloween/2013photos/DSC_0017.JPG"><img src="/images/halloween/2013photos/DSC_0017.JPG" width="200" height="150"></a>
+  <a href="/images/halloween/2013photos/DSC_0018.JPG"><img src="/images/halloween/2013photos/DSC_0018.JPG" width="200" height="150"></a>
+  <a href="/images/halloween/2013photos/DSC_0019.JPG"><img src="/images/halloween/2013photos/DSC_0019.JPG" width="200" height="150"></a>
+  <a href="/images/halloween/2013photos/DSC_0020.JPG"><img src="/images/halloween/2013photos/DSC_0020.JPG" width="200" height="150"></a>
+  <a href="/images/halloween/2013photos/DSC_0021.JPG"><img src="/images/halloween/2013photos/DSC_0021.JPG" width="200" height="150"></a>
+  <a href="/images/halloween/2013photos/DSC_0022.JPG"><img src="/images/halloween/2013photos/DSC_0022.JPG" width="200" height="150"></a>
   
     
 </div></center>
