--- a/holidays/2011photos.html
+++ b/holidays/2011photos.html
@@ -1,20 +1,20 @@
 <center>
-  <div id="gallery"> <a href="2011photos/1.jpg"><img src="2011photos/1.jpg" width="200" height="150"></a>
-    <a href="2011photos/2.jpg"><img src="2011photos/2.jpg" width="200" height="150"></a>
-    <a href="2011photos/3.jpg"><img src="2011photos/3.jpg" width="200" height="150"></a>
-    <a href="2011photos/4.jpg"><img src="2011photos/4.jpg" width="200" height="150"></a>
-    <a href="2011photos/5.jpg"><img src="2011photos/5.jpg" width="200" height="150"></a>
-    <a href="2011photos/6.jpg"><img src="2011photos/6.jpg" width="200" height="150"></a>
-    <a href="2011photos/7.jpg"><img src="2011photos/7.jpg" width="200" height="150"></a>
-    <a href="2011photos/8.jpg"><img src="2011photos/8.jpg" width="200" height="150"></a>
-    <a href="2011photos/9.jpg"><img src="2011photos/9.jpg" width="200" height="150"></a>
-    <a href="2011photos/10.jpg"><img src="2011photos/10.jpg" width="200" height="150"></a>
-    <a href="2011photos/11.jpg"><img src="2011photos/11.jpg" width="200" height="150"></a>
-    <a href="2011photos/12.jpg"><img src="2011photos/12.jpg" width="200" height="150"></a>
-<a href="2011photos/13.jpg"><img src="2011photos/13.jpg" width="200" height="150"></a>
-<a href="2011photos/14.jpg"><img src="2011photos/14.jpg" width="200" height="150"></a>
-<a href="2011photos/15.jpg"><img src="2011photos/15.jpg" width="200" height="150"></a>
-<a href="2011photos/16.jpg"><img src="2011photos/16.jpg" width="200" height="150"></a>
-<a href="2011photos/17.jpg"><img src="2011photos/17.jpg" width="200" height="150"></a>
+  <div id="gallery"> <a href="2011photos/1.jpg"><img src="/images/halloween/2011photos/1.jpg" width="200" height="150"></a>
+    <a href="/images/halloween/2011photos/2.jpg"><img src="/images/halloween/2011photos/2.jpg" width="200" height="150"></a>
+    <a href="/images/halloween/2011photos/3.jpg"><img src="/images/halloween/2011photos/3.jpg" width="200" height="150"></a>
+    <a href="/images/halloween/2011photos/4.jpg"><img src="/images/halloween/2011photos/4.jpg" width="200" height="150"></a>
+    <a href="/images/halloween/2011photos/5.jpg"><img src="/images/halloween/2011photos/5.jpg" width="200" height="150"></a>
+    <a href="/images/halloween/2011photos/6.jpg"><img src="/images/halloween/2011photos/6.jpg" width="200" height="150"></a>
+    <a href="/images/halloween/2011photos/7.jpg"><img src="/images/halloween/2011photos/7.jpg" width="200" height="150"></a>
+    <a href="/images/halloween/2011photos/8.jpg"><img src="/images/halloween/2011photos/8.jpg" width="200" height="150"></a>
+    <a href="/images/halloween/2011photos/9.jpg"><img src="/images/halloween/2011photos/9.jpg" width="200" height="150"></a>
+    <a href="/images/halloween/2011photos/10.jpg"><img src="/images/halloween/2011photos/10.jpg" width="200" height="150"></a>
+    <a href="/images/halloween/2011photos/11.jpg"><img src="/images/halloween/2011photos/11.jpg" width="200" height="150"></a>
+    <a href="/images/halloween/2011photos/12.jpg"><img src="/images/halloween/2011photos/12.jpg" width="200" height="150"></a>
+<a href="/images/halloween/2011photos/13.jpg"><img src="/images/halloween/2011photos/13.jpg" width="200" height="150"></a>
+<a href="/images/halloween/2011photos/14.jpg"><img src="/images/halloween/2011photos/14.jpg" width="200" height="150"></a>
+<a href="/images/halloween/2011photos/15.jpg"><img src="/images/halloween/2011photos/15.jpg" width="200" height="150"></a>
+<a href="/images/halloween/2011photos/16.jpg"><img src="/images/halloween/2011photos/16.jpg" width="200" height="150"></a>
+<a href="/images/halloween/2011photos/17.jpg"><img src="/images/halloween/2011photos/17.jpg" width="200" height="150"></a>
   </div></center>
 
