--- a/holidays/halloween.html
+++ b/holidays/halloween.html
@@ -128,7 +128,7 @@
          
          <div class="container">
            <div class="header">
-           <a href="https://briancallahan.github.io/"><img src="images/halloween/logo.png" alt="" name="me" width="100%" height="90" id="Insert_logo" style="background-color: #8090AB; display:block;" /></a> 
+           <a href="https://briancallahan.github.io/"><img src="/images/halloween/logo.png" alt="" name="me" width="100%" height="90" id="Insert_logo" style="background-color: #8090AB; display:block;" /></a> 
            
              </div>
            <div class="sidebar1">
