--- a/holidays/halloween.html
+++ b/holidays/halloween.html
@@ -144,6 +144,7 @@
              <p></p>
              </div>
            <div class="content">
+              <img src="/images/halloween/logo.png" alt="" name="me" width="100%" height="90">
              <h1>Welcome</h1>
              <p><center>Brian Callahan's Halloween Page.</center></p> <br>
              <p>This site is filled information about me and and I like to do, and includes my resume and contact info.</p>
