--- a/holidays/halloween.html
+++ b/holidays/halloween.html
@@ -45,7 +45,7 @@
          	width: 90%;
          	max-width: 1260px;
          	min-width: 780px;
-         	background-color: #000;
+         	background-color: #FFF;
          	margin: 0 auto; 
          }
          
