--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
       <!--
          body {
          	font: 100%/1.4 Verdana, Arial, Helvetica, sans-serif;
-         	background-color: #4E5869;
+         	background-color: #FFF;
          	margin: 0;
          	padding: 0;
          	color: #000;
