--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
       <!--
          body {
          	font: 100%/1.4 Verdana, Arial, Helvetica, sans-serif;
-         	background-color: #FFF;
+            background-image: url("http://bgfons.com/uploads/cardboard/cardboard_texture1000.jpg");
+         	background-color: #4e5869;
          	margin: 0;
          	padding: 0;
          	color: #000;
