--- a/index.html
+++ b/index.html
@@ -199,6 +199,15 @@
          	document.writeln("</center>");
          	 -->
       </script>
+              
+      <script language="javascript">
+        function autoResizeDiv()
+        {
+            document.getElementById('main').style.height = window.innerHeight +'px';
+        }
+        window.onresize = autoResizeDiv;
+        autoResizeDiv();
+      </script>
       </div>
       </div>
       </body>
