--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
          	min-width: 780px;
          	background-color: #FFF;
          	margin: 0 auto; 
+            max-height: 780px;
          }
                   
          .header {
