--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
          <body>         
          <div class="container">
            <div class="header">
-           <a href="https://briancallahan.github.io/"><img src="/images/Brian's Jeep.png" alt="" name="me" width="20%" height="90" id="Insert_logo" style="background-color: #8090AB; display:block;" /></a> 
+           <a href="https://briancallahan.github.io/"><img src="/images/temp.png" alt="" name="me" width="20%" height="90" id="Insert_logo" style="background-color: #8090AB; display:block;" /></a> 
            
              </div>
            <div class="sidebar1">
