--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
              <p>&nbsp;</p>
              <p>&nbsp;</p> 
          
-              <center><img src="/images/homeimage.jpg" alt="My Family" height="50%" width="50%"></center>
+              <center><img src="/images/homeimage.jpg" alt="My Family" max-height="50%" width="50%"></center>
          </div>
          	
          <script>
