--- a/calculator.html
+++ b/calculator.html
@@ -1,1 +1,65 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Character Dimensions Calculator</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 20px;
+        }
+        input {
+            margin: 5px;
+        }
+        button {
+            margin-top: 10px;
+        }
+        #results {
+            margin-top: 20px;
+            border-top: 1px solid #ccc;
+            padding-top: 10px;
+        }
+    </style>
+</head>
+<body>
+    <h1>Character Dimensions Calculator</h1>
+    
+    <label for="height">Enter your height (in inches): </label>
+    <input type="number" id="height" min="66" max="96">
+    <button onclick="calculateDimensions()">Calculate</button>
 
+    <div id="results"></div>
+
+    <script>
+        function calculateDimensions() {
+            const height = document.getElementById("height").value;
+            if (!height) {
+                alert("Please enter a height.");
+                return;
+            }
+
+            fetch('/calculate', {
+                method: 'POST',
+                headers: {
+                    'Content-Type': 'application/json',
+                },
+                body: JSON.stringify({ height_in_inches: parseInt(height) }),
+            })
+            .then(response => response.json())
+            .then(data => {
+                let resultsHTML = '<h2>Character Dimensions:</h2><ul>';
+                for (let part in data) {
+                    resultsHTML += `<li><strong>${part}:</strong> ${data[part]}</li>`;
+                }
+                resultsHTML += '</ul>';
+                document.getElementById("results").innerHTML = resultsHTML;
+            })
+            .catch(error => {
+                console.error('Error:', error);
+                alert('There was an error with the calculation.');
+            });
+        }
+    </script>
+</body>
+</html>
