--- a/index.html
+++ b/index.html
@@ -131,6 +131,7 @@
                <li><a href="/projects.html">Projects</a></li>  
                <li><a href="hobbies.html">My Hobbies</a></li>
                <li><a href="photos.html">Photos</a></li>
+               <li><a href="calculator.html">Calculator</a></li>
                <li><a href="contact.html">Contact Me</a></li>
              </ul>
              <p></p>
