--- a/calculator.html
+++ b/calculator.html
@@ -9,7 +9,7 @@
 
 <h2>Character Dimensions Calculator</h2>
 
-<label for="height">Enter Height (in inches):</label>
+<label for="height">Enter Height (in inches) between 66 and 96:</label>
 <input type="number" id="height" name="height">
 <button onclick="calculateDimensions()">Calculate</button>
 
